Fix mainNavigation z-index

--- a/app/styles/PrimaryHeader.module.css
+++ b/app/styles/PrimaryHeader.module.css
@@ -16,7 +16,7 @@
 .mainNavigation {
   width: 57.6%;
   background-color: rgba(0, 0, 0, 0.75);
-
+  z-index: 1;
   height: 100%;
 }
 
